// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render conflicting type 1`] = `
<span>
  conflict
  <span>
     
    <EuiIconTip
      aria-label="Multiple type field"
      color="warning"
      content="The type of this field changes across indices. It is unavailable for many analysis functions."
      type="alert"
    />
  </span>
</span>
`;

exports[`Table should render normal field name 1`] = `
<span>
  Elastic
</span>
`;

exports[`Table should render normal type 1`] = `
<span>
  string
</span>
`;

exports[`Table should render normally 1`] = `<I18nContext />`;

exports[`Table should render the boolean template (false) 1`] = `<span />`;

exports[`Table should render the boolean template (true) 1`] = `
<dot
  aria-label="Is searchable"
  className="euiIcon euiIcon--medium euiIcon--secondary"
  height="16"
  style={null}
  viewBox="0 0 16 16"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
/>
`;

exports[`Table should render timestamp field name 1`] = `
<span>
  timestamp
  <span>
     
    <EuiIconTip
      aria-label="Primary time field"
      color="primary"
      content="This field represents the time that events occurred."
      type="clock"
    />
  </span>
</span>
`;
